tests/ui/fail/exhaustive_match_auth.stderr
error[E0004]: non-exhaustive patterns: `_` not covered
  --> tests/ui/fail/exhaustive_match_auth.rs:10:11
   |
10 |     match auth {
   |           ^^^^ pattern `_` not covered
   |
note: `AuthKind` defined here
  --> src/providers/mod.rs
   |
   | pub enum AuthKind {
   | ^^^^^^^^^^^^^^^^^
   = note: the matched value is of type `AuthKind`
   = note: `AuthKind` is marked as non-exhaustive, so a wildcard `_` is necessary to match exhaustively
help: ensure that all possible cases are being handled by adding a match arm with a wildcard pattern or an explicit pattern as shown
   |
14 ~         AuthKind::UserPass => "user-pass",
15 ~         _ => todo!(),
   |
